Fix for PR#14338.  Will port to R-devel later.
git-svn-id: https://svn.r-project.org/R/branches/R-2-11-branch@52562 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -40,6 +40,9 @@ BUG FIXES
 
     o	The command-line parser could mistake --file=size... for one of
 	the options for setting limits for Ncells or Vcells.
+	
+    o 	The internal strptime() could corrupt its copy of the timezone
+    	which would then lead to spurious warnings. (PR#14338)
 
 
 
