--- a/NEWS
+++ b/NEWS
@@ -44,6 +44,11 @@ BUG FIXES
     o 	The internal strptime() could corrupt its copy of the timezone
     	which would then lead to spurious warnings. (PR#14338)
 
+    o	dir.create(recursive = TRUE) could fail if one of the components
+	existed but was a directory on a read-only file system.  (Seen
+	on Solaris, where the error code returned is not even listed
+	as possible on the man page.)
+
 
 
 		CHANGES IN R VERSION 2.11.1
