--- a/doc/manual/R-admin.texi
+++ b/doc/manual/R-admin.texi
@@ -4671,13 +4671,18 @@ found at
 @strong{However}, toolchains from late April 2010 on at that site
 generate objects with symbols without a leading underscore.  Current
 R-devel snapshots are made with the earlier toolchain (as used for @R{}
-2.11.x) which does use leading underscores, so that is the default for
-@code{SYMPAT64} in @file{src/gnuwin32/MkRules.dist}.  If you are using a
-binary distribution of @R{}, check that the settings of @code{BINPREF}
-and @code{SYMPAT} in file @file{etc/x64/Makeconf} are appropriate to
-your toolchain.  The use or not of leading underscores affects linking
-to external static and import libraries but not linking directly to
-DLLs.
+2.11.x) which does use leading underscores, so that is the current
+default for @code{SYMPAT64} in @file{src/gnuwin32/MkRules.dist}.  If you
+are using a binary distribution of @R{}, check that the settings of
+@code{BINPREF} and @code{SYMPAT} in file @file{etc/x64/Makeconf} are
+appropriate to your toolchain.  The use or not of leading underscores
+affects linking to external static and import libraries but not linking
+directly to DLLs.
+
+Other toolchains are available: for example under
+@uref{http://sourceforge.net/projects/mingw-w64/files/Toolchains%20targetting%20Win64/Personal%20Builds/}
+is a native x64 Windows toolchain that may be useful when building
+external software.
 
 
 @node Useful additional programs,  , The MinGW toolchain, The Windows toolset
