Port r52465 from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-11-branch@52573 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -58,6 +58,9 @@ BUG FIXES
 	nothing in those cases; previously the behaviour was
 	undefined, probably device-specific, and possibly dangerous.
 
+    o	Improperly calling Recall() from outside a function could cause a
+	segfault.  (Reported by Robert McGehee.)
+
 
 
 		CHANGES IN R VERSION 2.11.1
