Port r52303 from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-11-branch@52580 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -64,7 +64,9 @@ BUG FIXES
 
     o	Improperly calling Recall() from outside a function could cause a
 	segfault.  (Reported by Robert McGehee.)
-
+        
+    o	\Sexpr[result=rd] in an Rd file added a spurious newline,
+	which was displayed as extra whitespace when rendered.
 
 
 		CHANGES IN R VERSION 2.11.1
